<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3F2FD"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.example.android.helloandroid.MainActivity">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-80dp"
            android:layout_marginTop="-80dp"
            android:src="@drawable/udacity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/company_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:text="@string/email_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textStyle="italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#82B1FF"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:text="@string/on_button"
            android:onClick="onlineCourses"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>